# sp-move-vm

./: Cargo.toml
language/compiler/: Cargo.toml
language/compiler/bytecode-source-map/: Cargo.toml
language/compiler/bytecode-source-map/src/: source_map.rs
language/compiler/ir-to-bytecode/: Cargo.toml
language/compiler/ir-to-bytecode/src/: compiler.rs  context.rs  parser.rs
language/compiler/ir-to-bytecode/syntax/: Cargo.toml
language/compiler/ir-to-bytecode/syntax/src/: syntax.rs
language/move-core/types/: Cargo.toml
language/move-core/types/src/: lib.rs  parser.rs  transaction_argument.rs  vm_status.rs
language/move-ir/types/: Cargo.toml
language/move-ir/types/src/: ast.rs  location.rs  spec_language_ast.rs
language/move-lang/: Cargo.toml
language/move-lang/src/: lib.rs  name_pool.rs
language/move-lang/src/cfgir/: mod.rs  translate.rs
language/move-lang/src/errors/: mod.rs
language/move-lang/src/expansion/: mod.rs  translate.rs
language/move-lang/src/hlir/: mod.rs
language/move-lang/src/naming/: mod.rs
language/move-lang/src/parser/: ast.rs  syntax.rs
language/move-lang/src/shared/: mod.rs
language/move-lang/src/to_bytecode/: context.rs  translate.rs
language/move-lang/src/typing/: mod.rs
language/move-vm/runtime/src/: data_cache.rs  lib.rs  loader.rs  move_vm.rs  native_functions.rs  runtime.rs
language/move-vm/test-utils/src/: lib.rs  misc.rs
language/move-vm/types/src/values/: values_impl.rs
language/vm/src/: cursor.rs  deserializer.rs  errors.rs  file_format_common.rs
mvm/: Cargo.toml
mvm/src/: lib.rs  mvm.rs  types.rs  vm_config.rs
mvm/src/storage/: bank.rs  chain.rs  event.rs  mod.rs  session.rs  store.rs
mvm/tests/: bank.rs  vm.rs
mvm/tests/assets/modules/: BalanceTest.move  Coin.move
mvm/tests/assets/scripts/: LoadBalance.move
mvm/tests/common/: mod.rs  modules.rs
