[package]
name = "move-lang"
version = "0.0.1"
authors = ["Diem Association <opensource@diem.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = {version ="1.0.34" }
regex = {version = "1.4.2" }

codespan = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8" }
codespan-reporting = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8" }
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive"] }
petgraph = { git = "https://github.com/pontem-network/petgraph.git", default-features = false, features = ["graphmap", "stable_graph", "matrix_graph"]}
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
move-ir-types = { path = "../move-ir/types" }
move-core-types = { path = "../move-core/types" }
move-vm = { path = "../vm", package = "vm" }
borrow-graph = { path = "../borrow-graph" }
bcs = { path = "../../bcs" }
move-bytecode-verifier = { path = "../bytecode-verifier", package = "bytecode-verifier" }
ir-to-bytecode = {path = "../compiler/ir-to-bytecode"}
bytecode-source-map = { path = "../compiler/bytecode-source-map" }

[default]
default = ["std"]

[features]
std = []