[package]
name = "bytecode-source-map"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-ir-types = { path = "../../move-ir/types", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }
bcs = { path = "../../../bcs", default-features = false}
codespan = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8", features = ["std"] }
codespan-reporting = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8" }
serde = { version = "1.0.117", default-features = false, package = "alt_serde", features = ["derive"] }

[features]
default = []
fuzzing = []
