[package]
name = "ir-to-bytecode"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem ir to bytecode"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
ir-to-bytecode-syntax = { path = "syntax", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-ir-types = { path = "../../move-ir/types", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }
bytecode-source-map = { path = "../bytecode-source-map", version = "0.1.0" }
log = "0.4.11"
codespan = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8", features = ["std"] }
codespan-reporting = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8" }
thiserror = "1.0.22"

[features]
default = []
fuzzing = []

[patch.crates-io]
serde = { version = "1.0.117", default-features = false, package = "alt_serde", features = ["derive"] }