[package]
name = "move-ir-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Types for Move IR"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
codespan = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8", features = ["std", "serialization"] }
serde = { version = "1.0.117", default-features = false, package = "alt_serde", features = ["derive"] }
hex = "0.4.2"
once_cell = "1.4.1"

move-core-types = { path = "../../move-core/types", version = "0.1.0" }
