[package]
name = "ir-to-bytecode-syntax"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem ir to bytecode syntax"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
codespan = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8", features = ["std"] }
hex = "0.4.2"
move-ir-types = { path = "../../../move-ir/types", version = "0.1.0" }
move-core-types = { path = "../../../move-core/types", version = "0.1.0" }

[features]
default = []
fuzzing = []

[patch.crates-io]
serde = { version = "1.0.117", default-features = false, package = "alt_serde", features = ["derive"] }